Add GDPR info to footer
Signed-off-by: Mike McKiernan <mmckiernan@nvidia.com>

--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -6,3 +6,14 @@ dl > dt > em > span.pre { padding-right: 0px; padding-left: 2px; }
 
 dl > dt > code.sig-name > span.pre { padding-left: 2px; }
 
+footer div p {
+  font-size: 80%;
+}
+
+footer div p a {
+  color: var(--small-font-color);
+}
+
+footer div p a:hover {
+  color: var(--small-font-color);
+}
